package org.example;

public class Celsius extends Temperatura {
    public Celsius(double temperatura) {
        super(temperatura);
    }
}
