package org.example;

public class Fahrenheit extends Temperatura {
    public Fahrenheit(double temperatura) {
        super(temperatura);
    }
}
