package org.example;

public class Kelvin extends Temperatura {
    public Kelvin(double temperatura) {
        super(temperatura);
    }
}
