package org.example;

public abstract class Temperatura {
    protected double temperatura;

    public Temperatura(double temperatura) {
        this.temperatura = temperatura;
    }

    public double getTemperatura() {
        return temperatura;
    }
}

